tests/errors/semantic/non_blocking/PRIMITIVE_IMMUTABLE_RESTRICTION_IS_string.py
def compare_str_is() :
    n = 'hello world'
    a = 'hello world'
    return n is a
